benchtests/bench-malloc-simple.c
@@ -87,7 +87,7 @@ bench (unsigned long size)
   size_t iters = NUM_ITERS;
   int **arr = (int**) malloc (MAX_ALLOCS * sizeof (void*));
 
-  for (int t = 0; t <= 3; t++)
+  for (int t = 0; t < 3; t++)
     for (int i = 0; i < NUM_ALLOCS; i++)
       {
 	tests[t][i].n = allocs[i];
